<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.ucd.cs.neilgrogan13204052.deathnotices.DeathNotices$PlaceholderFragment">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/viewNoticesListButton"
                android:src="@drawable/ic_notice"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="right"
                android:cropToPadding="false"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/viewNoticesListButton"
                android:text="@string/show_notices"
                android:layout_centerInParent="true"
                android:id="@+id/viewNoticesText" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/viewNoticesMapButton"
                android:src="@drawable/ic_map"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/viewNoticesMapButton"
                android:text="@string/view_map"
                android:layout_centerInParent="true"
                android:id="@+id/viewMapNoticesText"
                android:layout_marginLeft="10dp"/>



        </RelativeLayout>



    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/searchNoticesButton"
            android:src="@drawable/ic_search"
            android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/searchNoticesButton"
                android:text="@string/search_notices"
                android:id="@+id/searchNoticesText" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

